external-crates/move/crates/move-compiler/tests/move_check/expansion/unbound_module_alias_in_type.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03002]: unbound module
  ┌─ tests/move_check/expansion/unbound_module_alias_in_type.move:2:16
  │
2 │     fun foo(x: X::T) { x; }
  │                ^ Unbound module alias 'X'
